[package]
name = "token_balance_watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde_json = "1.0"
reqwest = { version = "^0.11", features = ["json"] }
http = "0.2"
tokio = { version = "1", features = ["full"] }
tiny-keccak = { version = "^2.0", features = ["sha3"] }
ethabi = "14.0"
hex = "0.4"
web3-hash-utils = "1.0.0"